--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@
                 <div class="col-md-4">
                     <h2 class="heading">About Me</h2>
                 </div>
+                <div class = "col-md-4">
+                    <h2>Pic Here</h2>
+                </div>
                 <div class="col-md-8">
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat. Donec
@@ -188,32 +191,35 @@
     <div id="skills">
         <h2 class="heading">Skills</h2>
         <ul>
+            <li>Dynamical Systems</li>
+            <li>Multiscale Modeling</li>
+            <li>Stochastic Processes</li>
+            <li>Data Analytics</li>
+            <li>Machine Learning</li>
+
             <li>JavaScript</li>
-            <li>Python</li>
-            <li>Ruby</li>
-            <li>Go</li>
+            <li>HTML5</li>
+            <li>CSS</li>
             <li>Node.js</li>
-            <li>AngularJs</li>
-            <li>React</li>
-            <li>Elixir</li>
-            <li>Java</li>
+            <li>Angular</li>
+            <li>TypeScript</li>
+            <li>D3.js</li>
+            <li>ECharts</li>
+
+            <li>Python</li>
+            <li>MATLAB</li>
+            <li>Octave</li>
+            <li>R</li>
             <li>C</li>
             <li>C#</li>
             <li>C++</li>
-            <li>Ruby on Rails</li>
-            <li>JavaScript</li>
-            <li>Python</li>
-            <li>Ruby</li>
-            <li>Go</li>
-            <li>Node.js</li>
-            <li>AngularJs</li>
-            <li>React</li>
-            <li>Elixir</li>
-            <li>Java</li>
-            <li>C</li>
-            <li>C#</li>
-            <li>C++</li>
-            <li>Ruby on Rails</li>
+
+            <li>Git</li>
+            <li>Mercurial</li>
+
+            <li>Unity3D</li>
+            <li>Adobe After Effects</li>
+
         </ul>
     </div>
     <!-- End #skills -->
@@ -237,7 +243,7 @@
             <div class="row">
                 <div class="col-sm-5 copyright">
                     <p>
-                        Copyright &copy; 2017 YOUR NAME
+                        Copyright &copy; 2018 Graham Johnson
                     </p>
                 </div>
                 <div class="col-sm-2 top">
