populating information and updating HTML

--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
     <div id="lead">
         <div id="lead-content">
             <h1>Graham Johnson</h1>
-            <h2>Computational Mathematics, Data Analytics, & Visualization</h2>
+            <h2>Computational Mathematics</h2>
+            <h2> Data Analytics & Visualization </h2>
             <a href="Documents/GJohnson_2018.pdf" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
@@ -196,6 +197,9 @@
             <li>Stochastic Processes</li>
             <li>Data Analytics</li>
             <li>Machine Learning</li>
+            <li>Web Development</li>
+            <li>Mobile Development</li>
+            <li>HoloLens</li>
 
             <li>JavaScript</li>
             <li>HTML5</li>
@@ -218,7 +222,9 @@
             <li>Mercurial</li>
 
             <li>Unity3D</li>
+            <li>Augmented Reality</li>
             <li>Adobe After Effects</li>
+
 
         </ul>
     </div>
@@ -227,7 +233,7 @@
     <div id="contact">
         <h2>Get in Touch</h2>
         <div id="contact-form">
-            <form method="POST" action="https://formspree.io/email@email.com">
+            <form method="POST" action="https://formspree.io/johnsong5489@gmail.com">
                 <input type="hidden" name="_subject" value="Contact request from personal website" />
                 <input type="email" name="_replyto" placeholder="Your email" required>
                 <textarea name="message" placeholder="Your message" required></textarea>
