--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <div class="row">
                 <div class="col-md-4">
                         <div class = "col-md-6" id = "headShot">
-                                <img src = "../PersonalSite/images/Headshot.jpg">
+                                <img src = "../images/Headshot.jpg">
                         </div>
                     <h2 class="heading">About Me</h2>
 
