--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
     <!-- End footer -->
 </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="js/scripts.js"></script>
+    <script src="js/scripts.min.js"></script>
 </body>
 
 </html>
