filling in content

--- a/index.html
+++ b/index.html
@@ -94,29 +94,73 @@
     <div id="experience" class="background-alt">
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
+            <div data-date="March 2016 – Present">
+                <h3>The Aerospace Corporation - El Segundo, CA</h3>
+                <h4>Senior Member of Technical Staff</h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                        Joined the Advanced Visualization & Mobile Development
+                        section, within the Visualization & Immersive Technologies
+                        Department. Actively supported corporate innovation
+                        projects across emerging technology areas. We
+                        design, develop, and deploy interactive & high-performance
+                        data visualization applications across all platforms (i.e.
+                        desktop, web, mobile, & immersive hardware), enabling
+                        customers to tell data-driven stories while gaining intuitive
+                        understandings of complex systems. Led the development
+                        of the company’s first Augmented Reality applications,
+                        using Unity & the Microsoft HoloLens.
                 </p>
             </div>
 
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
+            <div data-date="June 2010 – May 2016">
+                <h3>Laboratory for Multiscale Processes, Purdue University</h3>
+                <h4>Graduate Research Assistant</h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                        Led by Distinguished Professor John H. Cushman on
+                        collaborative and individual projects crossing the boundaries
+                        of applied mathematics, multi-scale modeling, and
+                        computational sciences. Projects blended theoretical structures
+                        with computational schemes & made use of techniques
+                        from subjects of: nonlinear dynamical systems
+                        analysis, numerical methods & model design, random
+                        sampling, novel stochastic processes, experimental data
+                        analysis, estimation, statistical evaluation, & uncertainty
+                        quantification. Thesis research involved novel multiscale
+                        swelling porous media simulations, employing highfidelity
+                        modeling with continuum & statistical mechanics,
+                        methods in partial differential equations, finite-element
+                        methods, & adaptive mesh refinement.
                 </p>
             </div>
 
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
+            <div data-date="August 2011 – May 2016">
+                <h3>Dept. of Mathematics, Purdue University</h3>
+                <h4>Graduate Instructor</h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                        Continually progressed as a graduate instructor in the
+                        Mathematics Department. Assigned half-time semesterly
+                        teaching positions, & regularly lectured multiple sections
+                        of the assigned course. Developed effective learning
+                        materials, delivered fresh & engaging lessons, & designed
+                        fair examination questions. Managed grades ethically,
+                        held weekly office hours, & provided frequent feedback.
+                        Received exceptional instructor evaluations from
+                        students, course coordinators, & faculty.
                 </p>
             </div>
+
+            <div data-date="May 2012 – August 2012">
+                    <h3>ATK Space Systems - Promontory, UT</h3>
+                    <h4>Technical Graduate Intern</h4>
+                    <p>
+                            Internship within the Loads & Environments Group. Designed
+                            custom FIR filters for rocket engine test data, analyzed
+                            Monte-Carlo simulations for Thrust Vector Control
+                            experiments, & calculated statistical metrics to aid
+                            in future design considerations. Observed full-scale experimental
+                            design & testing in specialized laboratories.
+                    </p>
+                </div>
         </div>
     </div>
     <!-- End #experience -->
@@ -124,19 +168,36 @@
     <div id="education">
         <h2 class="heading">Education</h2>
         <div class="education-block">
-            <h3>University of Ottawa</h3>
-            <span class="education-date">Sept 2016 - Sept 2017</span>
-            <h4>Bachelor of Science in Computer Science</h4>
+            <h3>Purdue University - West Lafayette, IN</h3>
+            <span class="education-date">August 2013 - May 2016</span>
+            <h4>Master of Science in Mathematics</h4>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                Joined the Department to work with my advisor, Professor John H. Cushman & study Multiscale Modeling techniques,
+                Uncertainty quantification, non-standard stochastic processes (e.g. fractional Brownian motion), & various computational methods.
             </p>
+            <ul>
+                    <li>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        </li>
+                    <li>
+                        Completed core course work in pure Mathematics 
+                        (e.g. Measure Theory, Probability, Complex Analysis, Linear Algebra).
+                    </li>
+                    <li>
+                        Emphasized course work in Applied & Computational areas (e.g. Numerical Analysis, Stochastic Processes, Methods in Nonlinear Waves & Optics, Continuum Mechanics, Multsicale Modeling)
+                    </li>
+
+                </ul>
         </div>
         <!-- End .education-block -->
 
         <div class="education-block">
-            <h3>University of Ottawa</h3>
-            <span class="education-date">Sept 2016 - Sept 2017</span>
-            <h4>Bachelor of Science in Computer Science</h4>
+            <h3>Purdue University - West Lafayette, IN</h3>
+            <span class="education-date">Aug 2011 - December 2012</span>
+            <h4>Master of Science in Aeronautical & Astronautical Engineering</h4>
+            <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+            </p>
             <ul>
                 <li>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -149,12 +210,32 @@
                 </li>
             </ul>
         </div>
+
+        <div class="education-block">
+                <h3>Purdue University - West Lafayette, IN</h3>
+                <span class="education-date">Aug 2007 - May 2011</span>
+                <h4>Bachelor of Science in Aeronautical & Astronautical Engineering</h4>
+                <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                </p>
+                <ul>
+                    <li>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    </li>
+                    <li>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    </li>
+                    <li>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    </li>
+                </ul>
+            </div>
         <!-- End .education-block -->
     </div>
     <!-- End #education -->
 
     <div id="projects" class="background-alt">
-        <h2 class="heading">Projects</h2>
+        <h2 class="heading">Notable Projects</h2>
         <div class="container">
             <div class="row">
                 <div class="project shadow-large">
@@ -163,7 +244,7 @@
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Project Name Here</h3>
+                        <h3>Data Aggregation, Learning, & Visualization of Coffee</h3>
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
                         </p>
@@ -174,12 +255,28 @@
                 <!-- End .project -->
 
                 <div class="project shadow-large">
+                        <div class="project-image">
+                            <img src="images/project.jpg" />
+                        </div>
+                        <!-- End .project-image -->
+                        <div class="project-info">
+                            <h3>Collaborative Space Application with Augmented Reality - (HoloLens)</h3>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                            </p>
+                            <a href="#">View Project</a>
+                        </div>
+                        <!-- End .project-info -->
+                    </div>
+                    <!-- End .project -->
+
+                <div class="project shadow-large">
                     <div class="project-image">
                         <img src="images/project.jpg" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Project Name Here</h3>
+                        <h3>Computational Modeling of Swelling Porous Systems</h3>
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
                         </p>
@@ -188,6 +285,23 @@
                     <!-- End .project-info -->
                 </div>
                 <!-- End .project -->
+                <div class="project shadow-large">
+                        <div class="project-image">
+                            <img src="images/project.jpg" />
+                        </div>
+                        <!-- End .project-image -->
+                        <div class="project-info">
+                            <h3>Consensus Algorithms in Network Dynamical Systems</h3>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                            </p>
+                            <a href="#">View Project</a>
+                        </div>
+                        <!-- End .project-info -->
+                    </div>
+                    <!-- End .project -->
+
+
             </div>
         </div>
     </div>
