updated fields and projects

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <h1>Graham Johnson</h1>
             <h2>Computational Mathematics</h2>
             <h2> Data Analytics & Visualization </h2>
-            <a href="Documents/GJohnson_2018.pdf" class="btn-rounded-white">Download Resume</a>
+            <a href="Documents/GJohnson_2019.pdf" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
 
@@ -81,9 +81,13 @@
              
                 <div class="col-md-8">
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat. Donec
-                        eu vehicula neque. Donec viverra lorem nunc, tempus euismod eros sollicitudin ut. Quisque et tincidunt libero. Donec id pharetra justo. Proin euismod lacinia dolor, eu scelerisque justo tempus pharetra. Vivamus nunc justo, finibus
-                        ut nisl sed, euismod rhoncus nulla. Proin sed magna egestas, egestas ante et, congue eros. In consequat, mauris dapibus tincidunt suscipit, ex libero aliquet diam, at maximus risus enim non leo.
+                            Blending Computational Mathematics, Analytics, Data Visualization,
+                            Sciences, & Design with an Entrepreneurial mind. A passionate lifelong 
+                            learner with a continuous curiosity, seeking creative approaches to
+                            understand & explain complex systems of systems. Always exploring & evaluating potential 
+                            solutions. Strong skills in Multi-scale Modeling, Data Analytics, 
+                            Visualization, & Interactive App Development. Flexible communicator, 
+                            team synergist & advocate.
                     </p>
                 </div>
             </div>
@@ -98,17 +102,18 @@
                 <h3>The Aerospace Corporation - El Segundo, CA</h3>
                 <h4>Senior Member of Technical Staff</h4>
                 <p>
-                        Joined the Advanced Visualization & Mobile Development
-                        section, within the Visualization & Immersive Technologies
-                        Department. Actively supported corporate innovation
-                        projects across emerging technology areas. We
-                        design, develop, and deploy interactive & high-performance
-                        data visualization applications across all platforms (i.e.
-                        desktop, web, mobile, & immersive hardware), enabling
-                        customers to tell data-driven stories while gaining intuitive
-                        understandings of complex systems. Led the development
-                        of the company’s first Augmented Reality applications,
-                        using Unity & the Microsoft HoloLens.
+                        Senior member of the Advanced Visualization & Mobile Development section,
+                        within the Visualization & Immersive Technologies Dept. Actively supported 
+                        corporate innovation efforts to integrate emerging technologies across the 
+                        enterprise. Collaborated on a highly-skilled & multidisciplinary team to 
+                        spearhead project designs, developments, and deployments of numerous 
+                        interactive & high-performance data visualization applications across platforms 
+                        (e.g. responsive web & mobile, AR/VR wearables). Effectively managed concurrent 
+                        projects ranging from rapid prototyping efforts to full-scale production. 
+                        Facilitated customer-centric workflows with data-driven concepts to deliver 
+                        intuitive products that provide comprehension of complex systems. Engagingly 
+                        presented briefings to technical fellows, customers, & corporate executives 
+                        throughout project life-cycles.
                 </p>
             </div>
 
@@ -172,19 +177,25 @@
             <span class="education-date">August 2013 - May 2016</span>
             <h4>Master of Science in Mathematics</h4>
             <p>
-                Joined the Department to work with my advisor, Professor John H. Cushman & study Multiscale Modeling techniques,
-                Uncertainty quantification, non-standard stochastic processes (e.g. fractional Brownian motion), & various computational methods.
+                Joined the Mathematics Department to work with my advisor, Professor John H. Cushman, & his team to explore Multiscale Modeling techniques,
+                Uncertainty quantification, non-standard stochastic processes (e.g. fractional Brownian motion), & various computational methods. 
             </p>
             <ul>
                     <li>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Completed core course work in Mathematics 
+                        (e.g. Real Analysis, Measure Theory, Probability, Complex Analysis, Linear Algebra, Numerical Methods etc.).
+                        Emphasized courses in Applied & Computational areas (e.g. Stochastic Processes, Methods
+                        in Nonlinear Waves & Optics, Continuum Mechanics, Multsicale Modeling, Geophysics etc.)
                         </li>
                     <li>
-                        Completed core course work in pure Mathematics 
-                        (e.g. Measure Theory, Probability, Complex Analysis, Linear Algebra).
+                        Research focused on applying Mutliscale Modeling Methods (i.e Continuum & Statistcal Mechanics with Stochastics etc.) 
+                        to create high-fidelity, full-physics models of swelling porous systems. Additionally, we developed novel
+                        computational techniques, utilizing Finite Element Methods & Adaptive Mesh Refinements, to solve viscoelastic partial
+                        integro-differential equations for fluid transport in porous systems, & visualize the spatio-temporal evolution.
                     </li>
                     <li>
-                        Emphasized course work in Applied & Computational areas (e.g. Numerical Analysis, Stochastic Processes, Methods in Nonlinear Waves & Optics, Continuum Mechanics, Multsicale Modeling)
+                        Co-authored two peer-reviewed papers in: <i> Journal of Statistical Mechanics: Theory & Experiment</i> & <i>Geophysical Research Letters</i>
+                        and presented research findings during an international conference.
                     </li>
 
                 </ul>
@@ -196,18 +207,19 @@
             <span class="education-date">Aug 2011 - December 2012</span>
             <h4>Master of Science in Aeronautical & Astronautical Engineering</h4>
             <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                Studied with Professor Martin Corless, in the areas of nonlinear & optimal control schemes 
+                along with consensus algorithms in network dynamical systems. 
             </p>
             <ul>
                 <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                </li>
+                    Completed core course work in Applied Optimal Control, Nonlinear Dynamical Systems, Variational Mechaincs,
+                    Stochastic Applications, Advanced Linear Algebra, & Numerical Methods.
+                    Studied space applications including Astrodynamics, Orbital Mechanics, Attitude Control Systems 
+               </li>
                 <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Worked with Professor Corless to validate, verify, and generalize consensus algorithms in Nonlinear Network Dynamical Systems. 
                 </li>
-                <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                </li>
+
             </ul>
         </div>
 
@@ -216,17 +228,17 @@
                 <span class="education-date">Aug 2007 - May 2011</span>
                 <h4>Bachelor of Science in Aeronautical & Astronautical Engineering</h4>
                 <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                    Successfully completed the undergaduate program for Purdue's Aeronautics & Astronautics Engineering. 
+                    Learned and applied core engineering principles throughout course project's, laboratory experiments, 
+                    & a large senior design project.
                 </p>
                 <ul>
                     <li>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Focused in Dynamical Systems and Control Theory, with minor emphasis in Astrodynamics & Orbital Mechanics
                     </li>
                     <li>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                    </li>
-                    <li>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Core coursework in Statics, Mechanics, Structures, Thermodynamics, Signal Processing, Propulsion, Scripting, 
+                        Differential Equations, etc.
                     </li>
                 </ul>
             </div>
@@ -244,9 +256,9 @@
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Data Aggregation, Learning, & Visualization of Coffee</h3>
+                        <h3>Data Aggregation, Predictive Modeling & Interactive Visualization</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                            Project Details will be updated upon completion. Inquire for details.
                         </p>
                         <a href="#">View Project</a>
                     </div>
@@ -260,11 +272,13 @@
                         </div>
                         <!-- End .project-image -->
                         <div class="project-info">
-                            <h3>Collaborative Space Application with Augmented Reality - (HoloLens)</h3>
+                            <h3>Collaborative Space Applications with Augmented Reality - (HoloLens)</h3>
                             <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                                Developed networked HoloLens applications for scientists & engineers to use in collaboration environments,
+                                to interact and understand phases of satellite design, construction, & performance.
+                                Inquire for details.
                             </p>
-                            <a href="#">View Project</a>
+                            <!-- <a href="#">View Project</a> -->
                         </div>
                         <!-- End .project-info -->
                     </div>
@@ -272,15 +286,25 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/project.jpg" />
+                        <img src="images/SwellingPorous" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
                         <h3>Computational Modeling of Swelling Porous Systems</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                            Multi-dimensional effects of viscoelastic relaxation in asymmetrical
+                            swelling porous media. Many biological, industrial, and geophysical problems involve swelling and shrinking porous bodies.
+                            Among these are biological tissues, drug delivery substrates, fabrics, and geophysical bodies such as soils
+                            and shales, to name a few. Over the last quarter century, rigorous field equations for conservation of mass and
+                            energy, and balances of linear and angular momentum have been developed for swelling systems with constitutive
+                            models which are consistent with the 2nd law of thermodynamics. Under limiting conditions, these models
+                            can be reduced to a system of non-local PDE (i.e. integro-partial differential equations) that display viscoelastic
+                            character. Here we reformulate one of the models in terms of a system of ODE’s, which are solved in a multidimensional
+                            finite element setting with a deforming grid via Comsol Multiphysics and Matlab computational
+                            software. Results presented are for an initially spherically symmetric body, which undergoes asymmetrical
+                            swelling and shrinking deformation due to asymmetric boundary conditions.
                         </p>
-                        <a href="#">View Project</a>
+                        <!-- <a href="#">View Project</a> -->
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -367,7 +391,7 @@
             <div class="row">
                 <div class="col-sm-5 copyright">
                     <p>
-                        Copyright &copy; 2018 Graham Johnson
+                        Copyright &copy; 2019 Graham Johnson
                     </p>
                 </div>
                 <div class="col-sm-2 top">
