--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
 
                 <div class="project shadow-large">
                         <div class="project-image">
-                            <img src="images/project.jpg" />
+                            <img src="../images/HoloLens.jpg" />
                         </div>
                         <!-- End .project-image -->
                         <div class="project-info">
@@ -286,7 +286,7 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/SwellingPorous" />
+                        <img src="../images/SwellingPorous.jpg" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
@@ -311,7 +311,7 @@
                 <!-- End .project -->
                 <div class="project shadow-large">
                         <div class="project-image">
-                            <img src="images/project.jpg" />
+                            <img src="../images/NewtorkDiagram.jpg" />
                         </div>
                         <!-- End .project-image -->
                         <div class="project-info">
@@ -319,7 +319,7 @@
                             <p>
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
                             </p>
-                            <a href="#">View Project</a>
+                            <!-- <a href="#">View Project</a> -->
                         </div>
                         <!-- End .project-info -->
                     </div>
