updated text for project descriptions

--- a/index.html
+++ b/index.html
@@ -292,8 +292,7 @@
                     <div class="project-info">
                         <h3>Computational Modeling of Swelling Porous Systems</h3>
                         <p>
-                            Multi-dimensional effects of viscoelastic relaxation in asymmetrical
-                            swelling porous media. Many biological, industrial, and geophysical problems involve swelling and shrinking porous bodies.
+                            Many biological, industrial, and geophysical problems involve swelling and shrinking porous bodies.
                             Among these are biological tissues, drug delivery substrates, fabrics, and geophysical bodies such as soils
                             and shales, to name a few. Over the last quarter century, rigorous field equations for conservation of mass and
                             energy, and balances of linear and angular momentum have been developed for swelling systems with constitutive
@@ -301,8 +300,7 @@
                             can be reduced to a system of non-local PDE (i.e. integro-partial differential equations) that display viscoelastic
                             character. Here we reformulate one of the models in terms of a system of ODE’s, which are solved in a multidimensional
                             finite element setting with a deforming grid via Comsol Multiphysics and Matlab computational
-                            software. Results presented are for an initially spherically symmetric body, which undergoes asymmetrical
-                            swelling and shrinking deformation due to asymmetric boundary conditions.
+                            software.
                         </p>
                         <!-- <a href="#">View Project</a> -->
                     </div>
