--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                         <p>
                             Project Details will be updated upon completion. Inquire for details.
                         </p>
-                        <a href="#">View Project</a>
+                        <!-- <a href="#">View Project</a> -->
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -315,7 +315,8 @@
                         <div class="project-info">
                             <h3>Consensus Algorithms in Network Dynamical Systems</h3>
                             <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                                Computationally investigated resource allocation of large networks and consensus algorithms between distributed networks. 
+                                Some applications can range from space & ground sensing networks, large industrial plants, & commercial HVAC systems.
                             </p>
                             <!-- <a href="#">View Project</a> -->
                         </div>
