slight styling and image replacement

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                     Studied space applications including Astrodynamics, Orbital Mechanics, Attitude Control Systems 
                </li>
                 <li>
-                    Worked with Professor Corless to validate, verify, and generalize consensus algorithms in Nonlinear Network Dynamical Systems. 
+                    Worked with Professor Corless to validate, verify, and generalize consensus algorithms in Network Dynamical Systems. 
                 </li>
 
             </ul>
@@ -247,12 +247,12 @@
     <!-- End #education -->
 
     <div id="projects" class="background-alt">
-        <h2 class="heading">Notable Projects</h2>
+        <h2 class="heading">Sample Projects</h2>
         <div class="container">
             <div class="row">
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/project.jpg" />
+                        <img src="../images/fullstack_icon.jpg" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
